<resources>
    <string name="app_name">Android Course</string>
    <string name="onboarding_view_pager_text_1">Осень 2021 г., СПбГУ</string>
    <string name="onboarding_view_pager_text_2">Мы изучаем разработку под Android</string>
    <string name="onboarding_view_pager_text_3">Добро пожаловать в команду</string>
    <string name="onboarding_sign_in_button_text">Войти</string>
    <string name="onboarding_sign_up_button_text">Зарегистрироваться</string>
    <string name="bottom_navigation_title_news">Лента</string>
    <string name="bottom_navigation_title_people">Люди</string>
    <string name="bottom_navigation_title_likes">Лайки</string>
    <string name="bottom_navigation_title_bookmarks">Закладки</string>
    <string name="bottom_navigation_title_profile">Профиль</string>
    <string name="sign_in_sign_in_button_text">Войти</string>
    <string name="sign_up_sign_up_button_text">Зарегистрироваться</string>
    <string name="sign_in_email_text_layout_hint">Почта</string>
    <string name="sign_in_password_text_layout_hint">Пароль</string>
    <string name="common_sign_back_alert_dialog_text">Введенные данные пропадут</string>
    <string name="common_sign_back_alert_dialog_cancel_button_text">Отменить</string>
    <string name="common_sign_back_alert_dialog_ok_button_text">Ок</string>
    <string name="sign_up_club_rules">правила клуба</string>
    <string name="sign_up_terms_and_conditions_template">Я принимаю %s</string>
    <string name="sign_up_firstname_text_layout_hint">Имя</string>
    <string name="sign_up_lastname_text_layout_hint">Фамилия</string>
    <string name="sign_up_nickname_text_layout_hint">Имя пользователя</string>
    <string name="sign_up_under_nickname_text">Будет видно другим пользователям</string>
    <string name="sign_up_under_email_text">Будет видно только вам</string>
    <string name="sign_up_email_text_layout_hint">Почта</string>
    <string name="sign_up_password_text_layout_hint">Пароль</string>
    <string name="email_confirmation_code_is_sent_text">Код подтверджения выслан вам на почту</string>
    <string name="email_confirmation_confirm_code_button_text">Подтвердить</string>
    <string name="email_confirmation_open_mail_app_button_text">Перейти в почту</string>
    <string name="email_confirmation_send_code_again_button_text">Выслать код повторно</string>
    <string name="email_confirmation_send_code_again_hint_template">Подождите %s</string>

    <string name="smiley_heart">❤</string>
    <string name="smiley_laugh">😂</string>
    <string name="smiley_poo">💩</string>
</resources>